# colite

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Examples/Get_Started/: CMakeLists.txt  main.cpp
Examples/WinThreadPool/: CMakeLists.txt  WinThreadPool.cpp
Port/Windows/colite/: atomic_lock.h  eventloop_dispatcher.h  port.h  spin_lock.h  threadpool_dispatcher.h
Src/: dispatchers.cpp
Src/include/colite/: allocator.h  callable.h  colite.h  dispatchers.h  state.h  suspend.h  traits.h
example/: TestAllocator.h  main.cpp
src/: colite.h  colite_port.h  colite_suspend.h
src/dispatchers/: colite_callable.h  colite_dispatchers.h  dispatcher_main.cpp
src/utils/: colite_unique_ptr.h
